WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2007-03-25


Version 0.2.4 (under dev!):
   * fixed topic charset, now using channel charset if defined (bug #19386)
   * renamed log file for DCC chat (now <server>.dcc.<nick>.weechatlog)
   * fixed crash when closing a pv if a DCC chat is open on same nick
     (bug #19147)
   * fixed bug with channel topic after reconnection (not erased) (bug #19384)
   * added current buffer in hotlist when scrolling up in buffer (task #6664)
   * fixed bug with explode_string / free_exploded_string when max_items > 0
   * added new key (ctrl-R) for interactive and incremental search in buffer
     history (task #6628)
   * fixed /topic completion when no topic set on current channel (bug #19322)
   * improved password hiding, code cleanup (bug #19229)
   * added new return code in plugin API to force highlight (for message
     handlers only)
   * fixed bug with server buffer when "look_one_server_buffer" is ON and
     server buffer is moved to any number > 1 (bug #19219)
   * fixed /help command: displays plugin help for redefined commands
     (bug #19166)
   * prefix '/' disabled in commands (patch #5769)
   * fixed completion of redefined commands removed by plugins (bug #19176)
   * fixed memory leaks in perl and python plugins (bug #19163)
   * added "call" option to /key command, added new key function "insert" to
     insert text on command line (task #6468)
   * fixed permissions on "dcc" and "logs" directories (bug #18978)
   * added event handler to plugin API
   * added scots quickstart guide
   * added numeric argument for /clear command (buffer number) (patch #5372)
   * fixed crash when /away command is issued with no server connection
     (bug #18839)
   * fixed crash when closing a buffer opened on many windows
   * fixed freeze with SSL server when disconnecting after connection loss
     (bug #18735)

Version 0.2.3 (2007-01-10):